--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,11 +1,19 @@
-﻿<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>LibrarySystem</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Your Blazor App Title</title>
+    <base href="/" />
+    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/LibrarySystem.styles.css" rel="stylesheet" />
 </head>
 <body>
-    <app>Loading...</app>
-    <script src="_content/LibrarySystem/blazor.server.js"></script>
+    <app>
+        Loading...
+    </app>
+
+    <script src="_content/YourBlazorAppName.dll"></script>
+    <script src="_content/YourBlazorAppName.js"></script>
 </body>
 </html>
